--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -80,7 +80,8 @@
                             <div if.bind="user.editing" style="display:flex;flex-direction:column;">
                                 <editable style="background-color:beige;margin-bottom:12px;"
                                     settings.bind="{show_date:false, class:'story-section', checkable: false}"
-                                    story.bind="photo_story"></editable>
+                                    story.bind="photo_story">
+                                </editable>
                                 <div class="multi-select-div"
                                     style="margin-bottom:0px;position:relative;width:80%;height:60vh;overflow:auto;">
                                     <div class="multi-select-div" style="margin-bottom:15px;position:relative;">
