add stories to a book

--- a/src/resources/elements/picker/picker.html
+++ b/src/resources/elements/picker/picker.html
@@ -35,6 +35,10 @@
             if.bind="!options || options.length == 0">
             ${settings.empty_list_message}
         </div>
+        <div show.bind="check_option_selected">
+
+        </div>
+
     </div>
 
 </template>
