--- a/src/photos/photo-detail.html
+++ b/src/photos/photo-detail.html
@@ -2,18 +2,18 @@
 
     <div class="content-area photo-detail unselectable">
         <div class="detail-header">
-            <div style="float:left;cursor:pointer;padding:0;margin:0;" if.bind="theme.is_desktop">
+            <div css="cursor:pointer;padding:0;margin:0;" if.bind="theme.is_desktop">
                 <chat-button chatroom_id.two-way="chatroom_id" caption.bind="'photos.add-details'"
                     new-chatroom.delegate="create_chatroom()" chatroom-deleted.delegate="chatroom_deleted($event)">
                 </chat-button>
-                <i class="far fa-lg fa-arrow-up fa-rotate-90 ${next_class}" t="[title]photos.next-slide"
+                <i class="far fa-lg fa-arrow-up fa-rotate-${theme.rtltr=='rtl' ? 90 : 270} ${next_class}" t="[title]photos.next-slide"
                     click.trigger="go_next($event)" if.bind="photo_ids.length > 1"></i>
                 <i class="far fa-lg fa-arrow-up" t="[title]go-back" click.trigger="go_back()"
                     if.bind="theme.is_desktop"></i>
-                <i class="far fa-lg fa-arrow-up fa-rotate-270 ${prev_class}" t="[title]photos.prev-slide"
+                <i class="far fa-lg fa-arrow-up fa-rotate-${theme.rtltr=='ltr' ? 90 : 270} ${prev_class}" t="[title]photos.prev-slide"
                     click.trigger="go_prev($event)" if.bind="photo_ids.length > 1"></i>
             </div>
-            <h3 dir="rtl" style="float: right;margin:0px;">
+            <h3 dir="${theme.other_dir}" css="float: ${theme.other_dir};margin:0px;margin-top:-26px;">
                 ${photo_story.name}
             </h3>
             <button id="word-highlighter" if.bind="keywords && keywords.length > 0 && ! user.editing"
@@ -84,7 +84,7 @@
                                 </editable>
                                 <div class="multi-select-div"
                                     style="margin-bottom:0px;position:relative;width:80%;height:60vh;overflow:auto;">
-                                    <div class="multi-select-div" style="margin-bottom:15px;position:relative;">
+                                    <div class="multi-select-div" style="margin-bottom:15px;position:relative;" dir="${theme.rtltr}">
                                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">
                                             ${'stories.categories'
                                             & t}</div>
@@ -103,7 +103,7 @@
                                             ms-change.delegate="handle_topic_change($event) ">
                                         </multi-select>
                                     </div>
-                                    <div class="multi-select-div">
+                                    <div class="multi-select-div" dir="${theme.rtltr}">
                                         <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">
                                             ${'photos.photographers' & t}</div>
                                         <multi-select options.bind="photographer_list" category="photographer"
