--- a/src/resources/elements/date-range.html
+++ b/src/resources/elements/date-range.html
@@ -20,7 +20,7 @@
             </select>
         </div>
 
-        <div class="form-group" if.bind="show_date" style="width:18em;float:right;margin-top:5px;">
+        <div class="form-group" if.bind="show_date" css="width:18em;float:${theme.same_dir};margin-top:5px;">
             <span css="padding-top:0.6em;direction:${theme.rtltr};">${label & t}: ${show_date}</span>
         </div>
         <div if.bind="build_now"></div>
