rtl/ltr issues. minor stuff.

--- a/src/resources/elements/multi-select/multi-select.html
+++ b/src/resources/elements/multi-select/multi-select.html
@@ -68,7 +68,7 @@
                 </li>
             </ul>
         </div>
-        <div class="row options unselected" css="max-height:${option_list_height}px;min-height:132px;"
+        <div class="row options unselected" css="max-height:${option_list_height}px;min-height:132px;padding-left:16px;padding-right:16px;"
             if.bind="!options || options.length == 0">
             ${settings.empty_list_message}
         </div>
