--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -153,12 +153,12 @@
                     </div>
                 </div>
                 <div id="photo-filters-panel" class="col-md-3 col-sm-12 ${theme.rtltr}" if.bind="theme.is_desktop || editing_filters">
-                    <div class="row multi-select-div" style="margin-bottom:15px;position:relative;">
-                        <div style="margin-top: 0px;margin-bottom:2px;font-size:120%">${'stories.categories' & t}</div>
-                        <help if.bind="phase=='photos-ready-to-edit'" topic="photos.ready-to-edit", position="bottom" style="position:absolute;left:2px;top:2px;"></help>
-                        <help if.bind="phase=='applying-to-photos'" topic="apply-to-selected-photos", position="bottom" style="position:absolute;left:2px;top:2px;"></help>
-                        <help if.bind="user.advanced && phase=='photos-not-editing'" topic="tags" position="${theme.is_desktop ? 'bottom' : 'right'}" style="position:absolute;left:2px;top:2px;"></help>
-                        <help if.bind="(!user.advanced) && phase=='photos-not-editing'" topic="tags-simple" position="${theme.is_desktop ? 'bottom' : 'right'}" style="position:absolute;left:2px;top:2px;"></help>
+                    <div class="row multi-select-div ${theme.rtltr}">
+                        <div class="header">${'stories.categories' & t}</div>
+                        <help if.bind="phase=='photos-ready-to-edit'" topic="photos.ready-to-edit", position="bottom"></help>
+                        <help if.bind="phase=='applying-to-photos'" topic="apply-to-selected-photos", position="bottom"></help>
+                        <help if.bind="user.advanced && phase=='photos-not-editing'" topic="tags" position="${theme.is_desktop ? 'bottom' : 'right'}"></help>
+                        <help if.bind="(!user.advanced) && phase=='photos-not-editing'" topic="tags-simple" position="${theme.is_desktop ? 'bottom' : 'right'}"></help>
                         <multi-select options.bind="topic_list"
                             category="topic"
                             selected_options.bind="params.selected_topics"
