--- a/src/members/members.html
+++ b/src/members/members.html
@@ -1,7 +1,7 @@
 <template>
 
     <section class="container content-area">
-        <div>
+        <div class="${theme.rtltr}">
             <div class="row">
                 <div class="col-md-10 col-md-offset-2" style="padding-right:50px;">
                     <div class="inputs-inline">
