--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -1,5 +1,5 @@
 <template>
-    <div id="member-detail" class="content-area" ref="member_detail_container">
+    <div id="member-detail" class="content-area ${theme.rtltr}" ref="member_detail_container">
         <div class="row" ref="member_header">
             <div id="breadcrumb" class="col-xs-12 font-size-150 detail-header" dir="${theme.rtltr}">
                 <i class="far fa-arrow-up pull-left" style="cursor:pointer;" data-role="button" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
