--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -2,7 +2,7 @@
     <div id="member-detail" class="content-area ${theme.rtltr}" ref="member_detail_container">
         <div class="row" ref="member_header">
             <div id="breadcrumb" class="col-xs-12 font-size-150 detail-header" dir="${theme.rtltr}">
-                <i class="far fa-arrow-up pull-left" style="cursor:pointer;" data-role="button" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
+                <i class="far fa-arrow-up pull-${theme.other_dir}" style="cursor:pointer;" data-role="button" t="[title]go-back" click.trigger="go_back()" if.bind="theme.is_desktop"></i>
                 <span if.bind="member_info.id">${member_display_name}</span>
                 <span if.bind="! member_info.id">${new_member}</span>
                 <span style="color:white;font-size:85%;margin-right:30px;"> ${life_cycle_text} </span>
@@ -135,7 +135,7 @@
                         <i if.bind="user.privileges.EDITOR" class="fas fa-pencil is-link" style="font-size:0.5em;padding-top:8px;padding-left:4px;" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit', 'life')">&nbsp;</i>
                         ${story_0.name}
                     </h3>
-                    <div class="member-story-panel ${theme.rtltr}" style="border-left:solid 2px darkgray;height:82%" ref="life_summary_content">
+                    <div class="member-story-panel ${theme.rtltr} biography" ref="life_summary_content">
                             <p class="${theme.font_size} ${highlight_on}" innerhtml.bind="biography ">
                         </p>
                     </div>
