--- a/src/members/member-detail.html
+++ b/src/members/member-detail.html
@@ -102,7 +102,8 @@
                         <compose view-model="./member-edit" model.bind="member"></compose>
                     </div>
                 </div>
-                <div class="col-md-6 col-sm-12 fr-view life-summary" style="margin-bottom:20px;padding-left:20px;padding-bottom:10px;" ref="life_summary_box1"
+                <div class="col-md-6 col-sm-12 fr-view life-summary" style="margin-bottom:20px;padding-left:20px;padding-bottom:10px;"
+                     ref="life_summary_box1"
                     if.bind="story_0.story_text == '' && ! user.privileges.EDITOR && ! user.editing">
                 </div>
                 <div class="col-md-6 col-sm-12 fr-view life-summary" style="margin-bottom:20px;padding-left:20px;padding-bottom:10px;" ref="life_summary_box"
@@ -135,8 +136,8 @@
                         <i if.bind="user.privileges.EDITOR" class="fas fa-pencil is-link" style="font-size:0.5em;padding-top:8px;padding-left:4px;" t="[title]stories.edit" click.trigger="zoom_out(story_0, 'edit', 'life')">&nbsp;</i>
                         ${story_0.name}
                     </h3>
-                    <div class="member-story-panel ${theme.rtltr} biography" ref="life_summary_content">
-                            <p class="${theme.font_size} ${highlight_on}" innerhtml.bind="biography ">
+                    <div class="member-story-panel biography" ref="life_summary_content" dir="${biography_dir}">
+                            <p class="${theme.font_size} ${biography_dir} ${highlight_on}" innerhtml.bind="biography">
                         </p>
                     </div>
                 </div>
@@ -148,49 +149,49 @@
                 interact-draggable.bind="theme.interact_setting" interact-dragend.delegate="shift_stories($event)" dir="rtl">
                 <div class="col-lg-3 col-md-4 col-sm-6 col-xs-12 story-box" css="float:${theme.same_dir};height:${story_box_height}px;padding-right:8px;" click.trigger="goto_story_page(story_1)">
                     <div class="member-story-header" show.bind="story_1.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
-                        <h4 dir="rtl">
+                        <h4  ${story_1.dir}>
                             <span class="name" innerhtml.bind="story_1.name"></span>
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel member-story-preview" show.bind="story_1.story_text != ''" css="height:${story_box_height-85}px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_1.preview">
+                        <p class="${theme.font_size} ${story_1.dir}" innerhtml.bind="story_1.preview">
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_2)">
                     <div class="member-story-header" show.bind="story_2.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
-                        <h4 dir="rtl">
+                        <h4  ${story_2.dir}>
                             <span class="name" innerhtml.bind="story_2.name"></span>
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel member-story-preview" show.bind="story_2.story_text != ''" css="height:${story_box_height-85}px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_2.preview">
+                        <p dir="rtl" class="${theme.font_size} ${story_2.dir}" innerhtml.bind="story_2.preview">
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 hidden-sm hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_3)">
                     <div class="member-story-header" show.bind="story_3.story_text != ''" aubs-tooltip="text.bind:to_story_page" >
-                        <h4 dir="rtl">
+                        <h4  ${story_3.dir}>
                             <span class="name" innerhtml.bind="story_3.name"></span>
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel member-story-preview" show.bind="story_3.story_text != ''" css="height:${story_box_height-85}px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_3.preview">
+                        <p dir="rtl" class="${theme.font_size} ${story_3.dir}" innerhtml.bind="story_3.preview">
                         </p>
                     </div>
                 </div>
                 <div class="col-lg-3 col-md-4 col-sm-6 hidden-md hidden-sm hidden-xs story-box" css="float:${theme.same_dir};height:${story_box_height}px;" click.trigger="goto_story_page(story_4)">
                     <div class="member-story-header" show.bind="story_4.story_text != ''" aubs-tooltip="text.bind:to_story_page">
-                        <h4 dir="rtl">
+                        <h4 class="${story_4.dir}">
                             <span class="name" innerhtml.bind="story_4.name"></span>
                         </h4>
                         <i class="fa fa-play fa-lg fa-rotate-180 to-full-page"></i>
                     </div>
                     <div class="member-story-panel member-story-preview" show.bind="story_4.story_text != ''" css="height:${story_box_height-85}px;">
-                        <p dir="rtl" class="${theme.font_size}" innerhtml.bind="story_4.preview ">
+                        <p class="${theme.font_size} ${story_4.dir}" innerhtml.bind="story_4.preview ">
                         </p>
                     </div>
                 </div>
@@ -202,5 +203,8 @@
                 </div>
             </div>
         </div>
+    </div>
+    <div show.bind="false">
+        ${stories_base}
     </div>
 </template>
