rtl / ltr issues

--- a/src/audios/audios.html
+++ b/src/audios/audios.html
@@ -1,6 +1,6 @@
 <template>
     <section class="container content-area audios">
-        <div class="audio-page row content-area" dir="${theme.rtltr">
+        <div class="audio-page row content-area" dir.bind="theme.rtltr">
             <div class="row" style="width:100%;">
                 <div class="col-md-8 col-sm-12" style="padding:0;">
                     <div class="row" style="margin-bottom:15px;padding-right:15px;">
