--- a/src/photos/photos.html
+++ b/src/photos/photos.html
@@ -153,7 +153,7 @@
                     </div>
                 </div>
                 <div id="photo-filters-panel" class="col-md-3 col-sm-12 ${theme.rtltr}" if.bind="theme.is_desktop || editing_filters">
-                    <div class="row multi-select-div ${theme.rtltr}">
+                    <div class="row multi-select-div">
                         <div class="header">${'stories.categories' & t}</div>
                         <help if.bind="phase=='photos-ready-to-edit'" topic="photos.ready-to-edit", position="bottom"></help>
                         <help if.bind="phase=='applying-to-photos'" topic="apply-to-selected-photos", position="bottom"></help>
