--- a/src/resources/elements/search-input.html
+++ b/src/resources/elements/search-input.html
@@ -1,6 +1,6 @@
 <template>
     <require from="./search-input.css"></require>
-    <div class="search-input input-group ${theme.rtltr}" dir="${theme.rtltr">
+    <div class="search-input input-group">
         <div class="spyglass-div">
             <!--i class="fa fa-search search"></i-->
             <help topic.bind="help_topic" class="search" position="bottom" style="padding-right:2px;"></help>
