--- a/src/stories/story-detail.html
+++ b/src/stories/story-detail.html
@@ -6,13 +6,13 @@
             <div style="float:left;cursor:pointer;padding:0;margin:0;" if.bind="theme.is_desktop">
                 <button class="transparent btn" disabled.bind="next_disabled" ref="btn_next"
                     click.trigger="go_next($event)" t="[title]stories.next-story" if.bind="story_list.length > 1">
-                    <i class="far fa-lg fa-arrow-up fa-rotate-90 ${next_class}"></i>
+                    <i class="far fa-lg fa-arrow-up fa-rotate-${theme.rtltr=='ltr' ? 270 : 90} ${next_class}"></i>
                 </button>
                 <i class="far fa-arrow-up fa-lg" style="cursor:pointer;" t="[title]go-back" click.trigger="go_back()"
                     if.bind="theme.is_desktop"></i>
                 <button class="transparent btn" disabled.bind="prev_disabled" ref="btn_prev"
                     click.trigger="go_prev($event)" t="[title]stories.prev-story" if.bind="story_list.length > 1">
-                    <i class="far fa-lg fa-arrow-up fa-rotate-270 ${prev_class}"></i>
+                    <i class="far fa-lg fa-arrow-up fa-rotate-${theme.rtltr=='ltr' ? 90 : 270} ${prev_class}"></i>
                 </button>
             </div>
             <h3 dir="${story_dir}" style="float: right;margin:0px;">
