--- a/src/user/user-mode.html
+++ b/src/user/user-mode.html
@@ -108,8 +108,8 @@
         <ul class="dropdown-menu dropdown-menu-left" disabled.bind="isChangingLocale">
             <li style="border-bottom:solid 1px gray;">
                 <!-- Sharingbutton Facebook -->
-                <a class="resp-sharing-button__link" 
-                    href="https://facebook.com/sharer/sharer.php?u=${current_url}"
+                <a class="resp-sharing-button__link"
+                    href="https://facebook.com/sharer/sharer.php?u=${current_url}&t=${title}"
                     disabled="${current_url ? '' : 'disabled'}"
                     target="_blank" rel="noopener">
                     <i class="fab fa-facebook-f"></i>&nbsp;&nbsp;Facebook
