--- a/src/services/uploader.html
+++ b/src/services/uploader.html
@@ -9,37 +9,41 @@
                 <div class="panel-body">
                     <section class="container">
 
-                        <form class="form-horizontal" submit.delegate="save()">
+                        <div class="form-horizontal" >
                             <div class="form-group">
                                 <label
                                     style="margin-left:191px;width:150px;background-color:lightgray;border:solid 1px darkgray;border-radius:5px;text-align:center;padding:6px;"
-                                    class="control-label" for="photos">
+                                    class="control-label" for="file-list">
                                     ${'photos.select-photos' & t}
                                 </label>
                                 <div>
-                                    <input style="display:none" type="file" multiple id="photos" accept.bind="file_types"
-                                        files.bind="photos">
+                                    <input style="display:none" type="file" multiple id="file-list" accept.bind="file_types"
+                                        files.bind="files">
                                 </div>
                             </div>
-                            <div class="form-group" if.bind="photos && photos.length > 0">
-                                <h4 style="margin-left:191px;width:150px;text-align:center"> ${photos.length}
+                            <div class="form-group" if.bind="files && files.length > 0">
+                                <h4 style="margin-left:191px;width:150px;text-align:center"> ${files.length}
                                     ${'photos.photos-were-selected' & t}</h4>
                                 <div style="padding-left:191px">
-                                    <button style="margin-left:auto; margin-right:auto;width:150px;" type="submit"
-                                        class="btn btn-success">${'photos.send' & t}</button>
+                                    <button
+                                        style="margin-left:auto; margin-right:auto;width:150px;"
+                                        click.delegate="save()"
+                                        class="btn btn-success">
+                                        ${'photos.send' & t}
+                                    </button>
                                 </div>
                             </div>
                             <div style="padding-left:175px;margin-top:16px;" if.bind="! working">
                                 <button style="margin-left:auto; margin-right:auto;width:150px;"
-                                    click.delegate="cancel()" type="submit" class="btn btn-warning">${'photos.cancel' &
-                                    t}</button>
+                                    click.delegate="cancel()" class="btn btn-warning">${'photos.cancel' & t}
+                                </button>
                             </div>
-                        </form>
+                        </div>
                     </section>
-                    <div if.bind="working">
+                    <!--div if.bind="working">
                         <h3 style="display:flex;justify-content:center;">${'photos.upload-in-progress' & t}.
                             ${photos_left} ${'photos.left' & t}</h3>
-                    </div>
+                    </div-->
                     <progress-bar if.bind="working" final.bind="total_size" current.bind="total_uploaded_size"></progress-bar>
                     <div if.bind="upload_finished" style="margin-left:auto;margin-right:auto;width:350px;">
                         <h3 if.bind="uploaded.length>0" class="text-center success">${uploaded.length}
