--- a/src/admin/customize.html
+++ b/src/admin/customize.html
@@ -143,12 +143,21 @@
                         <input type="number" style="margin-left:8px;margin-right:-4px;width:200px;"
                             value.bind="promoted_story_expiration" change.delegate="set_promoted_story_expiration()" />
                     </div>
+                    <div style="margin-bottom:5px;">
+                        <label style="margin-left:8px;width:200px;">
+                            ${'admin.cover-photo' & t}
+                        </label>
+                        <input type="text" style="margin-left:8px;margin-right:-4px;width:200px;"
+                               value.bind="cover_photo"
+                               change.delegate="set_cover_photo()"/>
+                        <img if.bind="cover_photo" src="cover_photo" width="100" />
+                    </div>
                 </div>
             </div>
         </ux-dialog-body>
         <!-- <ux-dialog-footer>
             <button type="button" class="btn btn-primary" click.delegate="save()">${'members.save' & t}</button>
             <button type="button" class="btn btn-info" click.delegate="cancel()">${'members.cancel' & t}</button>
-        </ux-dialog-footer>
-    </ux-dialog> -->
+        </ux-dialog-footer-->
+    </ux-dialog>
 </template>
