--- a/src/services/uploader.html
+++ b/src/services/uploader.html
@@ -23,7 +23,7 @@
                             </div>
                             <div class="form-group" if.bind="files && files.length > 0">
                                 <h4 style="margin-left:191px;width:150px;text-align:center"> ${files.length}
-                                    ${'photos.photos-were-selected' & t}</h4>
+                                    ${objects_were_selected_text & t}</h4>
                                 <div style="padding-left:191px">
                                     <button
                                         style="margin-left:auto; margin-right:auto;width:150px;"
